--- a/apps/greeting/Dockerfile
+++ b/apps/greeting/Dockerfile
@@ -1,4 +1,4 @@
-FROM registry.access.redhat.com/redhat-openjdk-18/openjdk18-openshift:1.10 AS builder
+FROM registry.access.redhat.com/ubi8/openjdk-11:1.17 AS builder
 
 # WORKDIR /home/jboss
 
@@ -10,7 +10,7 @@ COPY src src
 
 RUN ./mvnw clean compile package
 
-FROM registry.access.redhat.com/redhat-openjdk-18/openjdk18-openshift:1.10
+FROM registry.access.redhat.com/ubi8/openjdk-11:1.17 
 
 COPY --from=builder /home/jboss/target/greeting-*.jar ./app.jar
 
