--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -10,10 +10,8 @@
     "http-proxy-middleware": "^2.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-scripts": "^5.0.1",
     "web-vitals": "^1.1.2"
-  },
-  "devDependencies": {
-    "react-scripts": "^5.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
