--- a/apps/frontend/k8s/frontend.Deployment.yaml
+++ b/apps/frontend/k8s/frontend.Deployment.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
         - name: frontend
-          image: quay.io/jpetnik/multi-arch/frontend:latest
+          image: quay.io/jpetnik/multi-arch/frontend:v1
           ports:
             - containerPort: 8080
           resources:
